# small-council

./: LICENSE  README.md  pyproject.toml
skill/: SKILL.md  council-tmux-cleanup.sh  council-tmux-start.sh  council-tmux-status.sh  council-tmux-wait.sh
skills/small-council/: SKILL.md
skills/small-council/references/: troubleshooting.md
skills/small-council/scripts/: setup.sh
src/small_council/: __init__.py  cli.py  config.py  council.py  files.py  openrouter.py  tmux.py
src/small_council/output/: __init__.py  json_output.py  markdown_output.py  rich_output.py
tests/: test_config.py  test_openrouter.py
